# bmi_demo

./: .gitignore  .travis.yml  Makefile  pyproject.toml
bmi_demo/: bmi.py  cli.py
tests/: test_bmi_calculation.py  test_bmi_version.py
tests/bmi/: test_classify_bmi.py
tests/cli/: test_cli.py
