[tool.poetry]
name = "bmi_demo"
version = "0.1.0"
description = ""
authors = ["JoaoGFarias <joao@thatsabug.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-watch = "^4.2.0"
typer = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
bmi_demo = "bmi_demo.cli:main"

[tool.poetry.urls]
issues = "https://github.com/JoaoGFarias/bmi_demo/issues"